# aqueous

./: Cargo.toml  LICESNE  notes.md
aqueous/: Cargo.toml
aqueous-macros/: Cargo.toml
aqueous-macros/src/: lib.rs
aqueous/src/: component.rs  consumer.rs  entity_store.rs  handler.rs  lib.rs  message.rs  message_store.rs  object.rs  stream_name.rs  useful_object.rs
aqueous/src/handler/: catchall_handler.rs  function_handler.rs  handler_collection.rs
aqueous/src/message/: message_data.rs  metadata.rs  msg.rs
aqueous/src/message_store/: connection.rs  error.rs  get.rs  read.rs  version.rs  write.rs
aqueous/src/message_store/get/: get_category.rs  get_last.rs  get_stream.rs  get_version.rs
aqueous/src/stream_name/: category.rs  separator.rs
aqueous_macros/: Cargo.toml
aqueous_macros/src/: lib.rs
examples/: component.rs  consumer.rs  hello_world.rs  write_commands.rs
examples/account_component/: .env.example  Cargo.toml
examples/account_component/examples/: write_commands.rs
examples/account_component/src/: account.rs  lib.rs  main.rs  store.rs
examples/account_component/src/consumers/: commands.rs
examples/account_component/src/consumers/commands/: transactions.rs
examples/account_component/src/handlers/: commands.rs
examples/account_component/src/handlers/commands/: transactions.rs
examples/account_component/src/messages/: commands.rs  events.rs
examples/account_component/src/messages/commands/: close.rs  deposit.rs  open.rs  withdraw.rs
examples/account_component/src/messages/events/: closed.rs  deposited.rs  opened.rs  withdrawal_rejected.rs  withdrawn.rs
src/: consumer.rs  entity_store.rs  handler.rs  lib.rs  message.rs  message_store.rs  store.rs  stream_name.rs
