[package]
name = "aqueous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["time", "uuid", "runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
uuid = { version = "1.3", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing"] }
moka = { version = "0.11", features = ["future"] }
