[package]
name = "aqueous"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", optional = true, features = [
  "time",
  "uuid",
  "runtime-tokio-native-tls",
  "postgres",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
uuid = { version = "1.3", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing"] }
moka = { version = "0.11", features = ["future"] }
thiserror = "1"
tracing = "0.1.37"
aqueous_macros = { path = "../aqueous_macros" }

[features]
default = ["postgres"]
postgres = ["dep:sqlx", "serde"]
serde = ["dep:serde", "dep:serde_json"]
