[package]
name = "aqueous"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1" }
serde_json = { version = "1" }
uuid = { version = "1.3", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing"] }
moka = { version = "0.11", features = ["future"] }
thiserror = "1"
tracing = "0.1.37"
aqueous-macros = { path = "../aqueous-macros" }
