[package]
name = "account_component"
version = "0.1.0"
edition = "2021"
default-run = "start"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aqueous = { path = "../../aqueous" }
sqlx = { version = "0.6", features = ["time", "uuid", "runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
uuid = { version = "1.3", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing"] }
