[package]
name = "account_component"
version = "0.1.0"
edition = "2021"
default-run = "start"

[dependencies]
aqueous = { path = "../../aqueous" }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
uuid = { version = "1.3", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing"] }

[[bin]]
name = "write_open"
path = "src/bin/interactive/write_open.rs"

[[bin]]
name = "write_deposit"
path = "src/bin/interactive/write_deposit.rs"

[[bin]]
name = "write_withdraw"
path = "src/bin/interactive/write_withdraw.rs"

[[bin]]
name = "write_close"
path = "src/bin/interactive/write_close.rs"
