[package]
name = "account_component"
version = "0.1.0"
edition = "2021"
# default-run = "start"

[dependencies]
aqueous = { path = "../../aqueous" }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
uuid = { version = "1.3", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
dotenvy = "0.15"
